--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
         <div class="footer-copyright light-grayish-cyan">
             <div class="container blac-2">
                 &copy; 2019 Veggit Ltd
-                <a class="right blac-2 subheader">Terms & Conditions</a>
+                <a class="right blac-2 subheader">Data-Centric Development</a>
             </div>
         </div>
     </footer>
