updated html templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
                         <p class="slightly-desaturated-cyan-2 three-hundred">Project submission by Sipo Charles for the Code
                             Institute
                             diploma in
-                            software, this application is meant for educational purposes only.
+                            software development, this application is meant for educational purposes only.
                         </p>
                 </div>
                 <div class="col s12 m4 offset-m2">
