fixed pagination on recipes page, and navigation from create to recipes page after a recipes is created.

--- a/templates/create.html
+++ b/templates/create.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-<form method="POST" action="{{ url_for('create') }}">
+<form method="POST">
     <section class="light-grayish-cyan three-hundred">
         
         <div class="row">
