--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -11,7 +11,7 @@
                 <div>
                     Enter amount of recipes to show:
                     <div class="input-field inline">
-                        <input  type="text" name="limit" placeholder="#12" value="{{ limit }}">
+                        <input  type="text" name="limit" placeholder="#8" value="{{ limit }}">
                     </div>
                 </div>
             </div>
@@ -74,17 +74,17 @@
             <div class="center">
                 <ul class="pagination">
                     <li {% if page==1 %} class="disabled" {% endif %}>
-                        <a {% if page>1 %}href="{{ url_for('account', page=page-1) }}"{% endif %}>
+                        <a {% if page>1 %}href="{{ url_for('recipes', page=page-1, limit=limit) }}"{% endif %}>
                             <i class="material-icons">chevron_left</i>
                         </a>
                     </li>
                     {% for page in pages %}
                         <li class="active">
-                            <a href="{{ url_for('recipes', page=page) }}">{{ page }}</a>
+                            <a href="{{ url_for('recipes', page=page, limit=limit) }}">{{ page }}</a>
                         </li>
                     {% endfor %}
                     <li {% if page==maximum %} class="disabled" {% endif %}>
-                        <a {% if page!=maximum %}href="{{ url_for('account', page=page + 1) }}"{% endif %}>
+                        <a {% if page!=maximum %}href="{{ url_for('recipes', page=page + 1, limit=limit) }}"{% endif %}>
                             <i class="material-icons">chevron_right</i>
                         </a>
                     </li>
