--- a/templates/create.html
+++ b/templates/create.html
@@ -78,7 +78,7 @@
                 <div class="row">
                     <!-- TEXTAREA -->
                     <div class="input-field col s12">
-                        <input id="textarea1" type="text" name="image" value="https://i0.wp.com/www.littlebitesofbeauty.com/wp-content/uploads/2015/06/default-placeholder.png" required>
+                        <input id="textarea1" type="text" name="image" value="http://docknyc.com/site/wp-content/uploads/2016/07/gony-logo-500x454.png" required>
                         <label for="textarea1">Add Image URL</label>
                     </div>
                 </div>
