updated README info

--- a/templates/base.html
+++ b/templates/base.html
@@ -239,6 +239,8 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/materialize.min.js') }}"></script>
 
+  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+  
   <script>
     // DROPDOWN
     $(document).ready(function () {
